--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -105,8 +105,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Einleitung}
-In diesem Dokument wird festgehalten wie zuverlässig und vor allem wie Korrekt der Code ist, den wir in der Implementierungsphase angefertigt haben. Dabei kommen die Testszenarien, die wir im Pflichtenheft spezifiziert haben zum Einsatz und helfen uns dabei die Korrektheit unserer App zu sichern.
-Zusätzlich wurden xUnit-Tests geschrieben, welche große Bereiche unseres Codes abdecken. Die Codecoverage wurde mit ReSharper ermittelt und im Dokument, durch aussagekräftige Diagramme, visualisiert. Für unsere Bibliothek haben wir zusätzlich eine Test App geschrieben, die uns, mit neu angefertigten Szenarien, dabei hilft die Korrektheit sicher zu stellen. Außerdem haben wir 5 Probanden gefunden, die sich bereiterklärt haben unsere App auszuprobieren. Ihre Kritik und Anmerkungen haben wir als Input genommen, um die App noch nutzerfreundlicher und besser zu machen.
+In diesem Dokument wird festgehalten, wie zuverlässig und vor allem wie korrekt der Code ist, den wir in der Implementierungsphase angefertigt haben. Dabei kommen die Testszenarien, die wir im Pflichtenheft spezifiziert haben zum Einsatz und helfen uns dabei die Korrektheit unserer App zu sichern.\\
+Zusätzlich wurden xUnit-Tests geschrieben, welche große Bereiche unseres Codes abdecken. Die Testabdeckung wurde mit ReSharper ermittelt und im Dokument durch aussagekräftige Diagramme visualisiert.\\
+Für unsere Bibliothek haben wir zusätzlich eine Test App geschrieben, die uns mit neu angefertigten Szenarien dabei hilft, die Korrektheit sicher zu stellen. Außerdem haben wir 5 Probanden gefunden, die sich bereiterklärt haben, unsere App auszuprobieren. Ihre Kritik und Anmerkungen haben wir als Input genommen, um die App noch nutzerfreundlicher und besser zu machen.
 
 
 \section{Testszenarien}
