Updates from Overleaf

--- a/Q-Phase/Validierung.tex
+++ b/Q-Phase/Validierung.tex
@@ -508,7 +508,7 @@ Da da Test App für die Bibliothek nicht in der Definitionsphase geplant wurde, 
 	\hline
 \end{tabular}
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App zeichnet Daten auf]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/StartSampling.jpeg}}
 \end{figure}
@@ -535,7 +535,7 @@ Da da Test App für die Bibliothek nicht in der Definitionsphase geplant wurde, 
 	\hline
 \end{tabular}
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App fordert den Nutzer, nach drücken des Buttons \glqq{Set Gyro LPF}, auf einen LPF für das Gyroskop  auszuwählen]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/GyroLPF.jpeg}}
 \end{figure}
@@ -562,7 +562,7 @@ Da da Test App für die Bibliothek nicht in der Definitionsphase geplant wurde, 
 	\hline
 \end{tabular}
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App fordert den Nutzer, nach drücken des Buttons \glqq{Set Acc LPF}, auf einen LPF für den Accelerometer auszuwählen]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/AccLPF.jpeg}}
 \end{figure}
@@ -605,7 +605,7 @@ Da da Test App für die Bibliothek nicht in der Definitionsphase geplant wurde, 
 	\hline
 \end{tabular}
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App fordert den Nutzer, nach drücken des Buttons \glqq{Set Samplingrate}, auf eine gültige Samplingrate einzugeben]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/SetSamplerate.jpeg}}
 \end{figure}
@@ -649,7 +649,7 @@ Da da Test App für die Bibliothek nicht in der Definitionsphase geplant wurde, 
 \paragraph{Hinweis}
 Der Scale Factor hängt von der gewählten Range ab.
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App fordert den Nutzer, nach drücken des Buttons \glqq{Set Gyro Range}, auf einen Range für das Gyroskop auszuwählen]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/GyroRange.jpeg}}
 \end{figure}
@@ -692,7 +692,7 @@ Der Scale Factor hängt von der gewählten Range ab.
 \paragraph{Hinweis}
 Der Scale Factor hängt von der gewählten Range ab.
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App fordert den Nutzer, nach drücken des Buttons \glqq{Set Acc Range}, auf einen Range für den Accelerometer auszuwählen]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/AccRange.jpeg}}
 \end{figure}
@@ -709,7 +709,7 @@ Der Scale Factor hängt von der gewählten Range ab.
 	\hline
 \end{tabular}
 \\ \\ \\ \\
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
     \subfigure[App zeigt dem Nutzer, nach drücken des Buttons \glqq{Set Battervoltage}, den aktuellen Wert der Batterievotage an]{\includegraphics[width=0.4\textwidth]{./bilder/BibTestApp/BatteryVoltage.jpeg}}
 \end{figure}
